Making all build config options in the CMake GUI.
- Also marking all library and include directories found via
  find_library/path advanced (not directly visible in CMake GUI unless
  toggled to show advanced options).
- Updating documentation to reflect SuiteSparse requirements on Ubuntu
  and ability to control build options in CMake GUI.

Change-Id: I0d69e02392ec547a7c365ba3e06f2ebc61cacf16

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -83,8 +83,10 @@ SET(CERES_ABI_VERSION 1.7.0)
 
 ENABLE_TESTING()
 
-OPTION(MINIGLOG "Use a stripped down version of glog" OFF)
+OPTION(MINIGLOG "Use a stripped down version of glog." OFF)
 OPTION(GFLAGS "Enable Google Flags." ON)
+OPTION(SUITESPARSE "Enable SuiteSparse." ON)
+OPTION(CXSPARSE "Enable CXSparse." ON)
 # Template specializations for the Schur complement based solvers. If
 # compile time, binary size or compiler performance is an issue, you
 # may consider disabling this.
@@ -146,6 +148,7 @@ IF (NOT EXISTS ${EIGEN_INCLUDE})
 ELSE (NOT EXISTS ${EIGEN_INCLUDE})
   MESSAGE("-- Found Eigen 3.x: ${EIGEN_INCLUDE}")
 ENDIF (NOT EXISTS ${EIGEN_INCLUDE})
+MARK_AS_ADVANCED(EIGEN_INCLUDE)
 
 SET(BLAS_AND_LAPACK_FOUND TRUE)
 IF ((NOT DEFINED LAPACK) OR (DEFINED LAPACK AND LAPACK))
@@ -173,7 +176,7 @@ IF (NOT BLAS_AND_LAPACK_FOUND)
   ADD_DEFINITIONS(-DCERES_NO_LAPACK)
 ENDIF (NOT BLAS_AND_LAPACK_FOUND)
 
-IF ((NOT DEFINED SUITESPARSE) OR (DEFINED SUITESPARSE AND SUITESPARSE))
+IF (SUITESPARSE)
 # Check for SuiteSparse dependencies
 
 SET(AMD_FOUND TRUE)
@@ -184,6 +187,7 @@ ELSE (EXISTS ${AMD_LIB})
   MESSAGE("-- Did not find AMD library")
   SET(AMD_FOUND FALSE)
 ENDIF (EXISTS ${AMD_LIB})
+MARK_AS_ADVANCED(AMD_LIB)
 
 FIND_PATH(AMD_INCLUDE NAMES amd.h)
 IF (EXISTS ${AMD_INCLUDE})
@@ -192,6 +196,7 @@ ELSE (EXISTS ${AMD_INCLUDE})
   MESSAGE("-- Did not find AMD header")
   SET(AMD_FOUND FALSE)
 ENDIF (EXISTS ${AMD_INCLUDE})
+MARK_AS_ADVANCED(AMD_INCLUDE)
 
 SET(CAMD_FOUND TRUE)
 FIND_LIBRARY(CAMD_LIB NAMES camd)
@@ -201,6 +206,7 @@ ELSE (EXISTS ${CAMD_LIB})
   MESSAGE("-- Did not find CAMD library")
   SET(CAMD_FOUND FALSE)
 ENDIF (EXISTS ${CAMD_LIB})
+MARK_AS_ADVANCED(CAMD_LIB)
 
 FIND_PATH(CAMD_INCLUDE NAMES camd.h)
 IF (EXISTS ${CAMD_INCLUDE})
@@ -209,6 +215,7 @@ ELSE (EXISTS ${CAMD_INCLUDE})
   MESSAGE("-- Did not find CAMD header")
   SET(CAMD_FOUND FALSE)
 ENDIF (EXISTS ${CAMD_INCLUDE})
+MARK_AS_ADVANCED(CAMD_INCLUDE)
 
 SET(COLAMD_FOUND TRUE)
 FIND_LIBRARY(COLAMD_LIB NAMES colamd)
@@ -218,6 +225,7 @@ ELSE (EXISTS ${COLAMD_LIB})
   MESSAGE("-- Did not find COLAMD library")
   SET(COLAMD_FOUND FALSE)
 ENDIF (EXISTS ${COLAMD_LIB})
+MARK_AS_ADVANCED(COLAMD_LIB)
 
 FIND_PATH(COLAMD_INCLUDE NAMES colamd.h)
 IF (EXISTS ${COLAMD_INCLUDE})
@@ -226,6 +234,7 @@ ELSE (EXISTS ${COLAMD_INCLUDE})
   MESSAGE("-- Did not find COLAMD header")
   SET(COLAMD_FOUND FALSE)
 ENDIF (EXISTS ${COLAMD_INCLUDE})
+MARK_AS_ADVANCED(COLAMD_INCLUDE)
 
 SET(CCOLAMD_FOUND TRUE)
 FIND_LIBRARY(CCOLAMD_LIB NAMES ccolamd)
@@ -235,6 +244,7 @@ ELSE (EXISTS ${CCOLAMD_LIB})
   MESSAGE("-- Did not find CCOLAMD library")
   SET(CCOLAMD_FOUND FALSE)
 ENDIF (EXISTS ${CCOLAMD_LIB})
+MARK_AS_ADVANCED(CCOLAMD_LIB)
 
 FIND_PATH(CCOLAMD_INCLUDE NAMES ccolamd.h)
 IF (EXISTS ${CCOLAMD_INCLUDE})
@@ -243,6 +253,7 @@ ELSE (EXISTS ${CCOLAMD_INCLUDE})
   MESSAGE("-- Did not find CCOLAMD header")
   SET(CCOLAMD_FOUND FALSE)
 ENDIF (EXISTS ${CCOLAMD_INCLUDE})
+MARK_AS_ADVANCED(CCOLAMD_INCLUDE)
 
 SET(CHOLMOD_FOUND TRUE)
 FIND_LIBRARY(CHOLMOD_LIB NAMES cholmod)
@@ -252,6 +263,7 @@ ELSE (EXISTS ${CHOLMOD_LIB})
   MESSAGE("-- Did not find CHOLMOD library")
   SET(CHOLMOD_FOUND FALSE)
 ENDIF (EXISTS ${CHOLMOD_LIB})
+MARK_AS_ADVANCED(CHOLMOD_LIB)
 
 FIND_PATH(CHOLMOD_INCLUDE NAMES cholmod.h)
 IF (EXISTS ${CHOLMOD_INCLUDE})
@@ -260,6 +272,7 @@ ELSE (EXISTS ${CHOLMOD_INCLUDE})
   MESSAGE("-- Did not find CHOLMOD header")
   SET(CHOLMOD_FOUND FALSE)
 ENDIF (EXISTS ${CHOLMOD_INCLUDE})
+MARK_AS_ADVANCED(CHOLMOD_INCLUDE)
 
 SET(SUITESPARSEQR_FOUND TRUE)
 FIND_LIBRARY(SUITESPARSEQR_LIB NAMES spqr)
@@ -269,6 +282,7 @@ ELSE (EXISTS ${SUITESPARSEQR_LIB})
   MESSAGE("-- Did not find SUITESPARSEQR library")
   SET(SUITESPARSEQR_FOUND FALSE)
 ENDIF (EXISTS ${SUITESPARSEQR_LIB})
+MARK_AS_ADVANCED(SUITESPARSEQR_LIB)
 
 FIND_PATH(SUITESPARSEQR_INCLUDE NAMES SuiteSparseQR.hpp)
 IF (EXISTS ${SUITESPARSEQR_INCLUDE})
@@ -277,6 +291,7 @@ ELSE (EXISTS ${SUITESPARSEQR_INCLUDE})
   MESSAGE("-- Did not find SUITESPARSEQR header")
   SET(SUITESPARSEQR_FOUND FALSE)
 ENDIF (EXISTS ${SUITESPARSEQR_INCLUDE})
+MARK_AS_ADVANCED(SUITESPARSEQR_INCLUDE)
 
 # If SuiteSparse version is >= 4 then SuiteSparse_config is required.
 # For SuiteSparse 3, UFconfig.h is required.
@@ -289,6 +304,7 @@ IF (EXISTS ${SUITESPARSE_CONFIG_LIB})
 ELSE (EXISTS ${SUITESPARSE_CONFIG_LIB})
   MESSAGE("-- Did not find SuiteSparse_config library")
 ENDIF (EXISTS ${SUITESPARSE_CONFIG_LIB})
+MARK_AS_ADVANCED(SUITESPARSE_CONFIG_LIB)
 
 FIND_PATH(SUITESPARSE_CONFIG_INCLUDE NAMES SuiteSparse_config.h)
 IF (EXISTS ${SUITESPARSE_CONFIG_INCLUDE})
@@ -297,6 +313,7 @@ IF (EXISTS ${SUITESPARSE_CONFIG_INCLUDE})
 ELSE (EXISTS ${SUITESPARSE_CONFIG_INCLUDE})
   MESSAGE("-- Did not find SuiteSparse_config header")
 ENDIF (EXISTS ${SUITESPARSE_CONFIG_INCLUDE})
+MARK_AS_ADVANCED(SUITESPARSE_CONFIG_INCLUDE)
 
 IF (EXISTS ${SUITESPARSE_CONFIG_LIB} AND
     EXISTS ${SUITESPARSE_CONFIG_INCLUDE})
@@ -311,6 +328,7 @@ IF (EXISTS ${SUITESPARSE_CONFIG_LIB} AND
       MESSAGE("-- Could not find librt, but found SuiteSparse_config, "
         "assuming that SuiteSparse was compiled without timing.")
     ENDIF (LIBRT_LIB)
+    MARK_AS_ADVANCED(LIBRT_LIB)
     LIST(APPEND SUITESPARSE_CONFIG_LIB ${LIBRT_LIB})
   ENDIF (CMAKE_SYSTEM_NAME MATCHES "Linux" OR UNIX AND NOT APPLE)
 ELSE (EXISTS ${SUITESPARSE_CONFIG_LIB} AND
@@ -332,6 +350,7 @@ IF (EXISTS ${METIS_LIB})
 ELSE (EXISTS ${METIS_LIB})
   MESSAGE("-- Did not find METIS library")
 ENDIF (EXISTS ${METIS_LIB})
+MARK_AS_ADVANCED(METIS_LIB)
 
 # SuiteSparseQR may be compiled with Intel Threading Building Blocks.
 SET(TBB_FOUND TRUE)
@@ -342,6 +361,7 @@ ELSE (EXISTS ${TBB_LIB})
   MESSAGE("-- Did not find TBB library")
   SET(TBB_FOUND FALSE)
 ENDIF (EXISTS ${TBB_LIB})
+MARK_AS_ADVANCED(TBB_LIB)
 
 IF (TBB_FOUND)
   FIND_LIBRARY(TBB_MALLOC_LIB NAMES tbbmalloc)
@@ -351,6 +371,7 @@ IF (TBB_FOUND)
     MESSAGE("-- Did not find TBB Malloc library")
     SET(TBB_FOUND FALSE)
   ENDIF (EXISTS ${TBB_MALLOC_LIB})
+  MARK_AS_ADVANCED(TBB_MALLOC_LIB)
 ENDIF (TBB_FOUND)
 
 # We don't use SET(SUITESPARSE_FOUND ${AMD_FOUND} ...) in order to be
@@ -375,33 +396,29 @@ ELSE ()
   SET(SUITESPARSE_FOUND FALSE)
 ENDIF ()
 
-ENDIF ((NOT DEFINED SUITESPARSE) OR (DEFINED SUITESPARSE AND SUITESPARSE))
-# By default, if all of SuiteSparse's dependencies are found, Ceres is
-# built with SuiteSparse support. -DSUITESPARSE=ON/OFF can be used to
-# enable/disable SuiteSparse explicitly.
-IF (DEFINED SUITESPARSE)
-  IF (SUITESPARSE)
-    IF (NOT SUITESPARSE_FOUND)
-      MESSAGE(FATAL_ERROR "One or more of SuiteSparse's dependencies was not found")
-    ENDIF (NOT SUITESPARSE_FOUND)
-  ELSE (SUITESPARSE)
-    ADD_DEFINITIONS(-DCERES_NO_SUITESPARSE)
-  ENDIF (SUITESPARSE)
-ELSE (DEFINED SUITESPARSE)
-  IF (SUITESPARSE_FOUND)
-    MESSAGE("-- Found all SuiteSparse dependencies. Building with SuiteSparse")
-    SET(SUITESPARSE ON)
-  ELSE (SUITESPARSE_FOUND)
-    MESSAGE("-- Did not find all SuiteSparse dependencies. Building without SuiteSparse")
-    SET(SUITESPARSE OFF)
-    ADD_DEFINITIONS(-DCERES_NO_SUITESPARSE)
-  ENDIF (SUITESPARSE_FOUND)
-ENDIF (DEFINED SUITESPARSE)
+IF (SUITESPARSE_FOUND)
+  # By default, if all of SuiteSparse's dependencies are found, Ceres is
+  # built with SuiteSparse support.
+  MESSAGE("-- Found all SuiteSparse dependencies. Building with SuiteSparse.")
+ELSE (SUITESPARSE_FOUND)
+  # Disable use of SuiteSparse if it cannot be found and continue.
+  MESSAGE("-- Did not find all SuiteSparse dependencies, disabling "
+          "SuiteSparse support.")
+  # Retain the help string associated with the SUITESPARSE option
+  # when updating it to disable use of SuiteSparse.
+  GET_PROPERTY(HELP_STRING CACHE SUITESPARSE PROPERTY HELPSTRING)
+  SET(SUITESPARSE OFF CACHE BOOL "${HELP_STRING}" FORCE)
+  ADD_DEFINITIONS(-DCERES_NO_SUITESPARSE)
+ENDIF (SUITESPARSE_FOUND)
+
+ELSE (SUITESPARSE)
+  MESSAGE("-- Building without SuiteSparse.")
+  ADD_DEFINITIONS(-DCERES_NO_SUITESPARSE)
+ENDIF (SUITESPARSE)
 
 # By default, if all of CXSparse's dependencies are found, Ceres is
-# built with CXSparse support. -DCXSPARSE=ON/OFF can be used to
-# enable/disable CXSparse explicitly.
-IF ((NOT DEFINED CXSPARSE) OR (DEFINED CXSPARSE AND CXSPARSE))
+# built with CXSparse support.
+IF (CXSPARSE)
 
 SET(CXSPARSE_FOUND ON)
 FIND_LIBRARY(CXSPARSE_LIB NAMES cxsparse)
@@ -411,6 +428,7 @@ ELSE (EXISTS ${CXSPARSE_LIB})
   MESSAGE("-- Did not find CXSparse header")
   SET(CXSPARSE_FOUND FALSE)
 ENDIF (EXISTS ${CXSPARSE_LIB})
+MARK_AS_ADVANCED(CXSPARSE_LIB)
 
 FIND_PATH(CXSPARSE_INCLUDE NAMES cs.h)
 IF (EXISTS ${CXSPARSE_INCLUDE})
@@ -419,26 +437,26 @@ ELSE (EXISTS ${CXSPARSE_INCLUDE})
   MESSAGE("-- Did not find CXSparse header")
   SET(CXSPARSE_FOUND FALSE)
 ENDIF (EXISTS ${CXSPARSE_INCLUDE})
-ENDIF ((NOT DEFINED CXSPARSE) OR (DEFINED CXSPARSE AND CXSPARSE))
+MARK_AS_ADVANCED(CXSPARSE_INCLUDE)
 
-IF (DEFINED CXSPARSE)
-  IF (CXSPARSE)
-    IF (NOT CXSPARSE_FOUND)
-      MESSAGE(FATAL_ERROR "-- CXSparse not found.")
-    ENDIF (NOT CXSPARSE_FOUND)
-  ELSE (CXSPARSE)
-    ADD_DEFINITIONS(-DCERES_NO_CXSPARSE)
-  ENDIF (CXSPARSE)
-ELSE (DEFINED CXSPARSE)
-  IF (CXSPARSE_FOUND)
-    MESSAGE("-- Building with CXSparse support.")
-    SET(CXSPARSE ON)
-  ELSE (CXSPARSE_FOUND)
-    MESSAGE("-- Building without CXSparse.")
-    SET(CXSPARSE OFF)
-    ADD_DEFINITIONS(-DCERES_NO_CXSPARSE)
-  ENDIF (CXSPARSE_FOUND)
-ENDIF (DEFINED CXSPARSE)
+IF (CXSPARSE_FOUND)
+  # By default, if all of CXSparse's dependencies are found, Ceres is
+  # built with CXSparse support.
+  MESSAGE("-- Building with CXSparse.")
+ELSE (CXSPARSE_FOUND)
+  # Disable use of CXSparse if it cannot be found and continue.
+  MESSAGE("-- Did not find CXSparse, Building without CXSparse.")
+  # Retain the help string associated with the CXSPARSE option
+  # when updating it to disable use of CXSparse.
+  GET_PROPERTY(HELP_STRING CACHE CXSPARSE PROPERTY HELPSTRING)
+  SET(CXSPARSE OFF CACHE BOOL "${HELP_STRING}" FORCE)
+  ADD_DEFINITIONS(-DCERES_NO_CXSPARSE)
+ENDIF (CXSPARSE_FOUND)
+
+ELSE (CXSPARSE)
+  MESSAGE("-- Building without CXSparse.")
+  ADD_DEFINITIONS(-DCERES_NO_CXSPARSE)
+ENDIF (CXSPARSE)
 
 IF (GFLAGS)
   FIND_LIBRARY(GFLAGS_LIB NAMES gflags)
@@ -447,6 +465,7 @@ IF (GFLAGS)
             "Can't find Google Flags. Please specify: "
             "-DGFLAGS_LIB=...")
   ENDIF (NOT EXISTS ${GFLAGS_LIB})
+  MARK_AS_ADVANCED(GFLAGS_LIB)
   MESSAGE("-- Found Google Flags library: ${GFLAGS_LIB}")
   FIND_PATH(GFLAGS_INCLUDE NAMES gflags/gflags.h)
   IF (NOT EXISTS ${GFLAGS_INCLUDE})
@@ -454,6 +473,7 @@ IF (GFLAGS)
             "Can't find Google Flags. Please specify: "
             "-DGFLAGS_INCLUDE=...")
   ENDIF (NOT EXISTS ${GFLAGS_INCLUDE})
+  MARK_AS_ADVANCED(GFLAGS_INCLUDE)
   MESSAGE("-- Found Google Flags header in: ${GFLAGS_INCLUDE}")
 ELSE (GFLAGS)
   MESSAGE("-- Google Flags disabled; no tests or tools will be built!")
@@ -473,6 +493,7 @@ ELSE (MINIGLOG)
     MESSAGE(FATAL_ERROR
             "Can't find Google Log. Please specify: -DGLOG_LIB=...")
   ENDIF (EXISTS ${GLOG_LIB})
+  MARK_AS_ADVANCED(GLOG_LIB)
 
   FIND_PATH(GLOG_INCLUDE NAMES glog/logging.h)
   IF (EXISTS ${GLOG_INCLUDE})
@@ -481,6 +502,7 @@ ELSE (MINIGLOG)
     MESSAGE(FATAL_ERROR
             "Can't find Google Log. Please specify: -DGLOG_INCLUDE=...")
   ENDIF (EXISTS ${GLOG_INCLUDE})
+  MARK_AS_ADVANCED(GLOG_INCLUDE)
 ENDIF (MINIGLOG)
 
 IF (NOT SCHUR_SPECIALIZATIONS)
