--- a/internal/ceres/CMakeLists.txt
+++ b/internal/ceres/CMakeLists.txt
@@ -147,7 +147,7 @@ IF (GFLAGS)
   LIST(APPEND CERES_LIBRARY_DEPENDENCIES ${GFLAGS_LIB})
 ENDIF (GFLAGS)
 
-IF (SUITESPARSE_FOUND)
+IF (SUITESPARSE AND SUITESPARSE_FOUND)
   LIST(APPEND CERES_LIBRARY_DEPENDENCIES ${SUITESPARSEQR_LIB})
   LIST(APPEND CERES_LIBRARY_DEPENDENCIES ${CHOLMOD_LIB})
   LIST(APPEND CERES_LIBRARY_DEPENDENCIES ${CCOLAMD_LIB})
@@ -166,20 +166,16 @@ IF (SUITESPARSE_FOUND)
     LIST(APPEND CERES_LIBRARY_DEPENDENCIES ${TBB_LIB})
     LIST(APPEND CERES_LIBRARY_DEPENDENCIES ${TBB_MALLOC_LIB})
   ENDIF (TBB_FOUND)
-ENDIF (SUITESPARSE_FOUND)
+ENDIF (SUITESPARSE AND SUITESPARSE_FOUND)
 
-IF (CXSPARSE_FOUND)
+IF (CXSPARSE AND CXSPARSE_FOUND)
   LIST(APPEND CERES_LIBRARY_DEPENDENCIES ${CXSPARSE_LIB})
-ENDIF (CXSPARSE_FOUND)
+ENDIF (CXSPARSE AND CXSPARSE_FOUND)
 
 IF (BLAS_AND_LAPACK_FOUND)
   LIST(APPEND CERES_LIBRARY_DEPENDENCIES ${LAPACK_LIBRARIES})
   LIST(APPEND CERES_LIBRARY_DEPENDENCIES ${BLAS_LIBRARIES})
 ENDIF (BLAS_AND_LAPACK_FOUND)
-
-IF (CXSPARSE_FOUND)
-  LIST(APPEND CERES_LIBRARY_DEPENDENCIES ${CXSPARSE_LIB})
-ENDIF (CXSPARSE_FOUND)
 
 IF (OPENMP_FOUND)
   IF (NOT MSVC)
@@ -276,9 +272,9 @@ IF (BUILD_TESTING AND GFLAGS)
 
   # TODO(sameeragarwal): This test should ultimately be made
   # independent of SuiteSparse.
-  IF (SUITESPARSE_FOUND)
+  IF (SUITESPARSE AND SUITESPARSE_FOUND)
     CERES_TEST(compressed_col_sparse_matrix_utils)
-  ENDIF (SUITESPARSE_FOUND)
+  ENDIF (SUITESPARSE AND SUITESPARSE_FOUND)
 
   CERES_TEST(symmetric_linear_solver)
   CERES_TEST(triplet_sparse_matrix)
